tests/positive/ownership_borrow.safe
-- Test: ownership_borrow
-- Description: Mutable borrow and continued use with `mut`.
--   A reference root is passed through a mutable borrow, then used again
--   after the call returns.
-- Expected: ACCEPT

package ownership_borrow

   subtype data_x is integer (0 to 100)
   subtype data_y is integer (0 to 500)

   type data is record
      x : data_x
      y : data_y
      next : data

   function modify_via_borrow (ref : mut data)
      ref.x = 11
      ref.y = 40

   function use_borrow
      owner : not null data = (x = 10, y = 20, next = null)

      modify_via_borrow (owner)
      owner.x = 16
