tests/negative/neg_pr118e2_ancestor_descendant.safe
-- Test: neg_pr118e2_ancestor_descendant
-- Description: Ancestor and descendant record-field paths are not disjoint.
-- Expected: REJECT mut_alias_conflict

package neg_pr118e2_ancestor_descendant

   subtype count is integer (0 to 20)

   type node is record
      value : count
      next  : node

   function touch (left : mut node; right : node)
      return

   function run
      owner : not null node = (value = 1, next = (value = 2, next = (value = 3, next = null)))

      touch (owner.next, owner.next.next)  -- ERROR: ancestor and descendant overlap
